# Crank-ML

./: .gitignore  404.html  README.md  index.html  justfile  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
api/: pages.txt
crank_ml/cluster/: kmeans.py
crank_ml/decomposition/: pca.py
crank_ml/factorization_machine/: factorization_machine_classifier.py  factorization_machine_regressor.py  fieldaware_factorization_machine_classifier.py  fieldaware_factorization_machine_regressor.py
crank_ml/impute/: tabnet_pretraining.py
crank_ml/linear_model/: sgd_classifier.py  sgd_regressor.py
crank_ml/preprocessing/: kbins_discretizer.py  standard_scaler.py
crank_ml/tabnet/: tabnet_classifier.py  tabnet_regressor.py
crank_ml/tree/: neural_decision_boosting_classifier.py  neural_decision_boosting_regressor.py  neural_decision_forest_classifier.py  neural_decision_forest_regressor.py  neural_decision_tree_classifier.py  neural_decision_tree_regressor.py
docs/: .pages  index.md
docs/api/: .pages
docs/introduction/: .pages  basic-concepts.md  index.md
examples/classification/: factorization_machine.py  feature_discretization.md  feature_discretization.qmd  fieldaware_factorization_machine.py  fieldaware_factorization_machine_iris.py  neural_decision_boosting_classifier_iris.py  neural_decision_forest_classifier_iris.py  neural_decision_tree_classifier.py  sgdclassifier_iris.py  tabnet_iris.py
examples/cluster/: kmeans_example.py
examples/decomposition/: pca_example.py
examples/impute/: tabnet_pretraining_example.py
search/: search_index.json
(+28 files in other folders)
