[tool.poetry]
name = "crank-ml"
version = "0.1.0"
description = ""
authors = ["chapman73 <csiu@squareup.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
black = { version = "^23.7.0", optional = true }
ruff = { version = "^0.0.285", optional = true }
isort = { version = "^5.12.0", optional = true }
torch = "^2.0.1"
wonnx = "^0.5.0"
onnx = "^1.14.0"
safetensors = "^0.3.3"
scikit-learn = { version = "^1.3.0", optional = true }
lightning = { version = "^2.0.7", optional = true }
mkdocs-material = { version = "^9.2.3", optional = true }
mkdocs-awesome-pages-plugin = { version = "*", optional = true }
jupyter = "^1.0.0"

[tool.poetry.extras]
train = [ "lightning", "scikit-learn" ]
dev = [ "black", "ruff", "isort", "mkdocs-material", "mkdocs-awesome-pages-plugin" ]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.mccabe]
max-complexity = 10

[tool.black]
line-length = 120
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 120
include_trailing_comma = true